# local-mcp-proxy

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  types.rs
src-tauri/src/mcp/: connection.rs  legacy_sse.rs  manager.rs  mod.rs
src-tauri/src/proxy/: server.rs
src/components/: KeyValueEditor.vue  McpCard.vue  ResourceList.vue  StatusBadge.vue  ToolList.vue
src/router/: index.ts
src/stores/: mcpStore.ts
src/types/: index.ts
src/views/: AddMcp.vue  Dashboard.vue  Logs.vue  McpDetail.vue  Settings.vue
