[package]
name = "mcp-hub"
version = "0.1.0"
description = "A centralized MCP server manager for macOS"
authors = ["you"]
edition = "2021"

[lib]
name = "mcp_hub_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# MCP SDK (official Rust MCP implementation)
rmcp = { version = "0.15", features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest"] }

# HTTP proxy server
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.6", features = ["cors"] }
futures = "0.3"
tokio-stream = "0.1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
